--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
   font-size:15px;
   background: #183152;
   font-weight: 300;
-  color:  #606060;;
+  color:  #606060;
   line-height: 1.6em;
 }
 
@@ -41,9 +41,7 @@ a:hover{
   color: #183152;
   text-decoration: none;
 }
-p{
-  text-align: justify;
-}
+
 
 table{
   font-weight: 300;
@@ -59,10 +57,11 @@ table{
   box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.2);
 }
 
-.container{
-  width:500px;
-  margin:30px auto;
+.container-fluid{
+  width: 75%;
+  margin: 30px auto;
 }
+
 #img-profil{
   border:4px solid rgba(24, 49, 82, 0.2);
   width: 100px;
@@ -119,7 +118,52 @@ table{
   color:#cccccc;
 }
 
+.text-justify{
+  text-align: justify;
+}
 
+#content{
+  margin-left: 120px;
+}
+
+#sidebar {
+  background-color: #183152;
+  position: fixed;
+  left: 0px;
+  top: 0px;
+  bottom: 0px;
+  width: 120px;
+  text-align: center;
+}
+
+#sidebar ul {
+  list-style: none;
+  padding-left: 0px;
+}
+
+#sidebar li {
+  margin-top:50px;
+  margin-bottom: 50px;
+}
+
+#sidebar a {
+  text-decoration: none;
+  font-size: 25px;
+  color:#7a8ba9;
+}
+
+#sidebar a:hover {
+  color: white;
+}
+
+@media (max-width: 768px) {
+  #content{
+    margin-left: 0px;
+  }
+  #sidebar {
+    display: none;
+  }
+}
 
 
 
